--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all the individuals having contributed content to the repository.
 
 Teslynn Christians <teslynnchr02@gmail.com>
 Simon Modise <mesaya@live.com>
